# XDownloader

./: .gitignore  README.md  render.yaml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  errors.py  extractor.py  main.py  schemas.py  security.py
backend/tests/: test_api.py  test_extractor.py  test_security.py
docs/: local-development.md  render-deployment.md
docs/superpowers/plans/: 2026-04-27-pwa-mobile-web.md
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  styles.css  types.ts
frontend/src/components/: MediaResult.tsx
